--- a/index.html
+++ b/index.html
@@ -2,110 +2,98 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Avios AI — Intelligent AI Solutions</title>
-  <meta name="description" content="Avios AI delivers production-ready automation, NLP copilots and multimodal systems that reduce manual work and deliver measurable ROI." />
-  <meta name="keywords" content="AI, chatbot, NLP, automation, multimodal, machine learning, Avios AI" />
-  <meta name="author" content="Vineeth Reddy" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Avios AI — AI that automates work, accelerates teams, and unlocks growth.</title>
+  <meta name="description" content="Avios AI builds production-ready automation, NLP copilots and multimodal systems that reduce manual work and deliver measurable impact." />
+  <meta name="keywords" content="Avios AI, AI, automation, NLP, multimodal, chatbot, copilots, machine learning" />
+  <link rel="canonical" href="https://vineeth2002.github.io/Avios-AI/" />
+  <meta name="robots" content="index,follow" />
 
-  <!-- Canonical & robots -->
-  <link rel="canonical" href="https://vineeth2002.github.io/Avios-AI/">
-  <meta name="robots" content="index, follow">
-
-  <!-- Social preview images (absolute URLs) -->
-  <meta property="og:title" content="Avios AI — Intelligent AI Solutions" />
+  <!-- Social preview -->
+  <meta property="og:title" content="Avios AI — AI that automates work, accelerates teams, and unlocks growth." />
   <meta property="og:description" content="Production-ready automation, NLP copilots and multimodal systems that deliver measurable ROI." />
   <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-avios-visual-1600.webp" />
-  <meta property="og:image:alt" content="Avios AI futuristic neural visual" />
-  <meta property="og:type" content="website" />
+  <meta property="og:image:alt" content="Avios AI hero visual" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-avios-visual-1600.webp" />
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-
-  <!-- Preload hero webp for LCP -->
   <link rel="preload" href="assets/hero-avios-visual-1600.webp" as="image" type="image/webp">
 
-  <!-- Fonts & Swiper -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-
-  <!-- Structured data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Avios AI",
-    "url": "https://vineeth2002.github.io/Avios-AI/",
-    "logo": "https://vineeth2002.github.io/Avios-AI/assets/favicon.ico",
-    "contactPoint": [{
-      "@type": "ContactPoint",
-      "contactType": "customer support",
-      "email": "aviosplatform@gmail.com"
-    }]
-  }
-  </script>
 
   <style>
     :root{
       --bg:#041022;
-      --panel: rgba(255,255,255,0.03);
       --muted:#9fb7c4;
       --text:#eaf6ff;
       --accent-1:#22c1ff;
       --accent-2:#1a8cff;
+      --panel: rgba(255,255,255,0.03);
       --maxw:1200px;
-      --pad:18px;
+      --pad:20px;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial; background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased}
+    body{margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
     a{color:inherit;text-decoration:none}
     .page{max-width:var(--maxw);margin:0 auto;padding:0 var(--pad)}
 
-    header{position:sticky;top:0;background:linear-gradient(180deg, rgba(2,6,12,0.75), rgba(2,6,12,0.3));backdrop-filter:blur(6px);z-index:60;border-bottom:1px solid rgba(255,255,255,0.02)}
+    /* header */
+    header{position:sticky;top:0;background:linear-gradient(180deg, rgba(2,6,12,0.78), rgba(2,6,12,0.25));backdrop-filter:blur(6px);z-index:60;border-bottom:1px solid rgba(255,255,255,0.02)}
     .nav{height:68px;display:flex;align-items:center;justify-content:space-between;padding:0 var(--pad)}
     .brand{display:flex;align-items:center;gap:12px}
     .logo{width:44px;height:44px;border-radius:10px;display:flex;align-items:center;justify-content:center;background:linear-gradient(90deg,var(--accent-1),var(--accent-2));font-weight:800;color:#001}
-    .nav-links{display:flex;gap:16px;align-items:center}
+    .brand .subtitle{font-size:0.85rem;color:var(--muted);line-height:1}
+    .nav-links{display:flex;gap:18px;align-items:center}
     .nav-links a{color:var(--muted);font-weight:600;padding:8px;border-radius:8px}
-    .nav-links a.active, .nav-links a:hover{color:var(--text);background:rgba(255,255,255,0.02)}
+    .nav-links a:hover{color:var(--text);background:rgba(255,255,255,0.02)}
+    @media(max-width:820px){ .nav-links{display:none} }
 
-    .hero{position:relative;min-height:72vh;display:flex;align-items:center;padding:30px 0}
+    /* hero */
+    .hero{position:relative;min-height:68vh;display:flex;align-items:center;padding:36px 0}
     .hero-inner{display:flex;gap:28px;align-items:center;width:100%;padding:0 var(--pad)}
     @media (max-width:980px){ .hero-inner{flex-direction:column-reverse;padding:0 14px} }
     .hero-left{flex:1;min-width:260px}
-    h1{margin:0 0 14px;font-size:clamp(28px,5.5vw,48px);line-height:1.04;font-weight:800}
+    .hero-left h1{margin:0 0 14px;font-size:clamp(28px,6vw,48px);line-height:1.02;font-weight:800}
     .lead{color:var(--muted);margin:0 0 18px;max-width:62ch}
     .cta-row{display:flex;gap:12px;flex-wrap:wrap}
-    .btn-primary{background:linear-gradient(90deg,var(--accent-1),var(--accent-2));color:#012;padding:12px 16px;border-radius:12px;font-weight:800;border:none;cursor:pointer}
-    .btn-ghost{border:1px solid rgba(255,255,255,0.04);padding:10px 14px;border-radius:10px;color:var(--text)}
+    .btn-primary{background:linear-gradient(90deg,var(--accent-1),var(--accent-2));color:#001;padding:12px 18px;border-radius:12px;font-weight:800;border:none;cursor:pointer;box-shadow:0 8px 20px rgba(10,30,60,0.4)}
+    .btn-outline{border:1px solid rgba(255,255,255,0.06);padding:11px 16px;border-radius:10px;color:var(--text);background:transparent}
 
-    .hero-right{width:420px;min-width:240px}
+    .hero-right{width:480px;min-width:260px}
     .visual{border-radius:14px;overflow:hidden;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03)}
-    .image-wrap{height:320px;display:flex;align-items:center;justify-content:center}
-    @media (max-width:980px){ .hero-right{width:100%} .image-wrap{height:220px} }
-    @media (max-width:480px){ .image-wrap{height:160px} }
+    .image-wrap{height:360px;display:flex;align-items:center;justify-content:center}
+    .image-wrap img{width:100%;height:100%;object-fit:cover;object-position:center right;display:block}
+    @media(max-width:980px){ .hero-right{width:100%} .image-wrap{height:220px} }
+    @media(max-width:480px){ .image-wrap{height:180px} .hero-left h1{font-size:28px} }
 
-    section{padding:46px 0}
-    .section-heading{text-align:center;font-weight:800;font-size:1.4rem;margin-bottom:20px}
-    .two-col{display:grid;grid-template-columns:1fr 340px;gap:18px;align-items:start}
+    /* sections */
+    section{padding:48px 0}
+    .section-heading{text-align:center;font-weight:800;font-size:1.4rem;margin:0 0 20px}
+    .two-col{display:grid;grid-template-columns:1fr 340px;gap:20px;align-items:start}
     @media (max-width:980px){ .two-col{grid-template-columns:1fr} }
     .card{background:var(--panel);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     @media (max-width:980px){ .grid-3{grid-template-columns:1fr} }
     .service-card{padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03)}
-    .muted{color:var(--muted)}
+    .muted{color:var(--muted);line-height:1.6}
 
+    /* testimonials */
     .testimonial{padding:18px;border-radius:12px;background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03)}
 
+    /* contact */
     .contact-grid{display:grid;grid-template-columns:1fr 320px;gap:18px}
     @media (max-width:980px){ .contact-grid{grid-template-columns:1fr} }
     label{display:block;margin-bottom:6px;font-weight:700}
     input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:rgba(0,0,0,0.12);color:var(--text);outline:none}
     textarea{min-height:140px}
 
-    footer{padding:28px 0;text-align:center;color:var(--muted);font-size:0.95rem;border-top:1px solid rgba(255,255,255,0.02)}
+    /* mobile fixes: ensure no CTA overlap */
+    .micro{display:flex;justify-content:space-between;gap:12px;align-items:center}
+    @media (max-width:480px){ .micro{flex-direction:column;align-items:flex-start} .micro .btn-primary{align-self:stretch;text-align:center} }
 
+    footer{padding:28px 0;text-align:center;color:var(--muted);font-size:0.95rem;border-top:1px solid rgba(255,255,255,0.02)}
     :focus{outline:3px solid rgba(34,193,255,0.12);outline-offset:3px;border-radius:6px}
   </style>
 </head>
@@ -114,31 +102,34 @@
     <header>
       <div class="nav">
         <div class="brand">
-          <div class="logo" aria-hidden="true">A</div>
+          <div class="logo" aria-hidden="true">AI</div>
           <div>
             <div style="font-weight:800">Avios AI</div>
-            <div style="font-size:.9rem;color:var(--muted)">Production AI, simply delivered</div>
+            <div class="subtitle">Production AI, simply delivered</div>
           </div>
         </div>
-        <nav class="nav-links" aria-label="Main navigation">
+
+        <nav class="nav-links" aria-label="Main">
           <a href="#about">About</a>
           <a href="#services">Services</a>
           <a href="#testimonials">Testimonials</a>
           <a href="#faq">FAQ</a>
-          <a href="#contact" class="btn-primary">Contact</a>
+          <a href="#contact" class="btn-primary" style="padding:8px 12px;font-size:.95rem">Contact</a>
         </nav>
       </div>
     </header>
 
     <main>
-      <section class="hero" aria-label="Intro">
+      <!-- HERO -->
+      <section class="hero" aria-label="Hero">
         <div class="hero-inner">
           <div class="hero-left">
-            <h1>Intelligent AI solutions for real-world outcomes</h1>
+            <h1>AI that automates work, accelerates teams, and unlocks growth.</h1>
             <p class="lead">We build production-ready automation, NLP copilots and multimodal systems that reduce manual work and deliver measurable impact — start with a focused PoC.</p>
-            <div class="cta-row">
+
+            <div class="cta-row" role="group" aria-label="Call to action">
               <a class="btn-primary" href="#contact">Request consult</a>
-              <a class="btn-ghost" href="#case-studies">View case studies</a>
+              <a class="btn-outline" href="#case-studies">View case studies</a>
             </div>
           </div>
 
@@ -152,8 +143,7 @@
                        srcset="assets/hero-image.png 1200w, assets/hero-image.png 800w"
                        sizes="(max-width:640px) 90vw, (max-width:1200px) 45vw, 420px"
                        alt="Avios AI futuristic hero visual"
-                       loading="eager"
-                       style="width:100%;height:100%;object-fit:cover;display:block;">
+                       loading="eager">
                 </picture>
               </div>
             </div>
@@ -161,13 +151,14 @@
         </div>
       </section>
 
+      <!-- ABOUT -->
       <section id="about">
         <h2 class="section-heading">About Avios AI</h2>
         <div class="two-col">
           <div class="card">
-            <p>Avios AI helps teams replace manual work with reliable AI systems. Practical automation, domain-aware assistants and multimodal tools that deliver measurable ROI — not demos.</p>
+            <p class="muted">Avios AI helps teams replace manual work with reliable AI systems. Practical automation, domain-aware assistants and multimodal tools that deliver measurable ROI — not demos.</p>
             <h3 style="margin-top:12px">How we work</h3>
-            <ul style="color:var(--muted)">
+            <ul class="muted">
               <li><strong>Discovery:</strong> identify one high-impact metric</li>
               <li><strong>Prototype:</strong> focused PoC with clear acceptance criteria</li>
               <li><strong>Production:</strong> rollout, monitoring & iterative improvement</li>
@@ -176,7 +167,7 @@
 
           <aside class="card">
             <h3 style="margin-top:0">Why Avios</h3>
-            <ul style="color:var(--muted)">
+            <ul class="muted">
               <li>Business-first: measurable KPIs</li>
               <li>Production-ready: reliable & monitored systems</li>
               <li>Privacy-aware: secure integrations</li>
@@ -185,6 +176,7 @@
         </div>
       </section>
 
+      <!-- SERVICES -->
       <section id="services">
         <h2 class="section-heading">Services</h2>
         <div class="grid-3">
@@ -194,6 +186,7 @@
         </div>
       </section>
 
+      <!-- CASE STUDIES -->
       <section id="case-studies">
         <h2 class="section-heading">Case studies</h2>
         <div class="grid-3">
@@ -203,6 +196,7 @@
         </div>
       </section>
 
+      <!-- CTA -->
       <section>
         <div class="card micro" style="display:flex;justify-content:space-between;align-items:center">
           <div><strong>Curious how AI fits your workflow?</strong><div class="muted">Tell us one pain point — we'll propose a focused experiment.</div></div>
@@ -210,6 +204,7 @@
         </div>
       </section>
 
+      <!-- TESTIMONIALS -->
       <section id="testimonials">
         <h2 class="section-heading">What clients say</h2>
         <div style="max-width:920px;margin:0 auto">
@@ -224,6 +219,7 @@
         </div>
       </section>
 
+      <!-- FAQ -->
       <section id="faq">
         <h2 class="section-heading">FAQ</h2>
         <div class="card" style="max-width:900px;margin:0 auto">
@@ -233,6 +229,7 @@
         </div>
       </section>
 
+      <!-- CONTACT -->
       <section id="contact">
         <h2 class="section-heading">Request a free consultation</h2>
         <div class="contact-grid">
@@ -262,7 +259,7 @@
 
           <aside class="card">
             <h3 style="margin-top:0">What happens next</h3>
-            <ul style="color:var(--muted)">
+            <ul class="muted">
               <li>We review details and schedule a short discovery call</li>
               <li>We propose a focused PoC with measurable KPIs</li>
               <li>We deliver a production-ready plan with monitoring and support</li>
@@ -280,11 +277,13 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script>
+    // Swiper (testimonials)
     new Swiper('.swiper', {
       loop:true, centeredSlides:true, slidesPerView:1, autoplay:{delay:4200,disableOnInteraction:false},
       pagination:{el:'.swiper-pagination',clickable:true}, speed:700
     });
 
+    // FAQ toggle
     document.querySelectorAll('.faq-item').forEach(item=>{
       item.addEventListener('click', ()=>{
         const a = item.querySelector('.muted');
@@ -293,8 +292,8 @@
       });
     });
 
+    // Contact form -> Apps Script endpoint with mailto fallback
     (function(){
-      // Apps Script webapp URL you provided earlier
       const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbye6WBe-sERGIk_PvApsCFrS46Dq0t0s2rvic0mduAn1iZY_q5J49jinkaHPneqXxY18Q/exec";
       const form = document.getElementById('contact-form');
       const status = document.getElementById('form-status');
