--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
   <!-- Social preview -->
   <meta property="og:title" content="Avios AI — AI that automates work, accelerates teams, and unlocks growth." />
   <meta property="og:description" content="Production-ready automation, NLP copilots and multimodal systems that deliver measurable ROI." />
-  <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-avios-visual-1600.webp" />
+  <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image.png" />
   <meta property="og:image:alt" content="Avios AI hero visual" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-avios-visual-1600.webp" />
+  <meta name="twitter:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image.png" />
 
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="preload" href="assets/hero-avios-visual-1600.webp" as="image" type="image/webp">
+  <link rel="preload" href="assets/hero-image.png?v=3" as="image">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
-  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -160,17 +159,18 @@
           <aside class="hero-right" aria-hidden="false">
             <div class="visual">
               <div class="image-wrap" role="img" aria-label="Avios AI futuristic hero visual">
+                <!-- primary uses hero-image.png (you confirmed this exists). cache-bust to force refresh -->
                 <picture>
-                  <source srcset="assets/hero-avios-visual-1600.webp" type="image/webp">
-                  <source srcset="assets/hero-avios-visual-1200.webp" type="image/webp">
-                  <img src="assets/hero-image.png"
+                  <source srcset="assets/hero-avios-visual-1600.webp?v=1" type="image/webp">
+                  <source srcset="assets/hero-avios-visual-1200.webp?v=1" type="image/webp">
+                  <img id="hero-img" src="assets/hero-image.png?v=3"
                        srcset="assets/hero-image.png 1200w, assets/hero-image.png 800w"
                        sizes="(max-width:640px) 90vw, (max-width:1200px) 45vw, 420px"
                        alt="Avios AI futuristic hero visual"
                        loading="eager"
                        style="width:100%;height:100%;object-fit:cover;object-position:center right;display:block">
                 </picture>
-                <!-- diagnostic overlay: hidden unless needed -->
+
                 <div id="hero-fallback" style="display:none;position:absolute;inset:0;align-items:center;justify-content:center;border-radius:var(--radius);background:linear-gradient(90deg,#021025,#003243);text-align:center;color:var(--muted);padding:24px;">
                   <div style="max-width:560px;margin:0 auto">
                     <div style="font-weight:800;font-size:1.3rem;margin-bottom:8px;color:var(--text)">Avios AI</div>
@@ -444,7 +444,7 @@
 
       // Hero image diagnostic: if image fails, show fallback overlay
       (function(){
-        const img = document.querySelector('.image-wrap img');
+        const img = document.getElementById('hero-img');
         const fallbackOverlay = document.getElementById('hero-fallback');
         if(!img) return;
         img.addEventListener('error', () => {
