--- a/index.html
+++ b/index.html
@@ -70,37 +70,52 @@ nav.topnav a { color:rgba(255,255,255,0.92); text-decoration:none; font-weight:6
 }
 .hero-card img{ width:100%; height:auto; display:block; object-fit:cover; border-radius:12px; }
 
+/* 3D-like neural network overlay (hero-only). pointer-events none so it won't block anything */
 .network { position:absolute; inset:0; pointer-events:none; z-index:1; opacity:0.96; }
+
+/* layered effects to give depth */
 .net-layer { transform-style:preserve-3d; }
 .net-lines { stroke:rgba(60,170,230,0.08); stroke-width:1.4; mix-blend-mode:screen; filter: drop-shadow(0 8px 20px rgba(0,120,170,0.08)); }
 .net-nodes { fill:rgba(40,170,220,0.95); filter:drop-shadow(0 6px 18px rgba(0,120,170,0.12)); }
+
+/* Node pulsation + slow drift for depth */
 .node-pulse { animation: pulse 2.8s ease-in-out infinite; transform-origin:center; }
 .node-pulse.slow { animation-duration:4.4s; }
 @keyframes pulse { 0%{ transform:scale(1); opacity:0.95 } 50%{ transform:scale(1.28); opacity:1 } 100%{ transform:scale(1); opacity:0.95 } }
+
+/* Gentle path wave movement (3D drift) */
 .path-drift { animation: drift 10s linear infinite; transform-origin:center; }
 @keyframes drift { 0%{ transform:translateZ(-6px) translateY(0) } 50%{ transform:translateZ(6px) translateY(-8px) } 100%{ transform:translateZ(-6px) translateY(0) } }
+
+/* thin foreground animated connections for parallax */
 .net-foreground { stroke: rgba(95,190,255,0.22); stroke-width:1.6; opacity:0.85; animation: slowMove 18s ease-in-out infinite; filter: drop-shadow(0 12px 26px rgba(0,120,170,0.06)); }
 @keyframes slowMove { 0%{ transform:translateY(0) } 50%{ transform:translateY(-6px) } 100%{ transform:translateY(0) } }
 
+/* content sections */
 main.content{ max-width:var(--content-max); margin:40px auto; padding:0 20px 80px; }
 .section { margin:36px 0; scroll-margin-top:96px; } .section h2 { text-align:center; margin:18px 0 28px; font-size:1.8rem; color:var(--white); }
 .grid-3 { display:grid; grid-template-columns:repeat(3,1fr); gap:20px; }
 .card { background:linear-gradient(180deg, rgba(2,10,14,0.45), rgba(2,10,14,0.6)); border-radius:14px; padding:20px; border:1px solid rgba(255,255,255,0.02); box-shadow:0 10px 24px rgba(2,10,12,0.45); }
 .card h3{ margin:0 0 10px; color:var(--white); } .card p{ margin:0; color:var(--muted); }
 
+/* testimonials */
 .testimonials { max-width:860px; margin:0 auto; }
 
+/* FAQ */
 .faq-list { max-width:860px; margin:0 auto; } .faq-item { background:transparent; border-radius:12px; margin-bottom:12px; padding:14px 16px; border:1px solid rgba(255,255,255,0.03); display:flex; align-items:flex-start; justify-content:space-between; cursor:pointer; }
 .faq-q { font-weight:700; color:var(--white); margin:0; } .faq-a { margin-top:10px; color:var(--muted); display:none; } .faq-item.open .faq-a { display:block; }
 
+/* contact */
 .contact-wrap { max-width:820px; margin:40px auto 20px; padding:26px; border-radius:12px; background:linear-gradient(180deg, rgba(2,12,15,0.55), rgba(2,12,15,0.65)); border:1px solid rgba(255,255,255,0.03); box-shadow:0 12px 40px rgba(0,0,0,0.45); }
 .contact-wrap label { display:block; font-weight:700; margin-bottom:8px; color:var(--white); }
 .contact-wrap input, .contact-wrap textarea { width:100%; padding:12px 14px; border-radius:10px; border:1px solid rgba(255,255,255,0.03); background:rgba(0,0,0,0.12); color:var(--white); margin-bottom:14px; outline:none; }
 .contact-wrap textarea { min-height:140px; resize:vertical; }
 .status { text-align:center; margin-top:8px; color:var(--muted); min-height:22px; }
 
+/* footer */
 footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font-size:14px; border-top:1px solid rgba(255,255,255,0.02); }
 
+/* responsive */
 @media (max-width:1024px){ .hero-inner { grid-template-columns: 1fr 420px; gap:30px; } .hero h1 { font-size:2.8rem; } }
 @media (max-width:820px){ .hero-inner { grid-template-columns: 1fr; gap:28px; padding-bottom:0; } .hero .right { order:2; } .hero-card { max-width:100%; } .hero h1{ font-size:2.2rem; } .grid-3 { grid-template-columns:repeat(2,1fr); } }
 @media (max-width:520px){
@@ -140,16 +155,19 @@ footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font
 <section class="hero" aria-labelledby="hero-heading">
   <!-- 3D-ish network SVG overlay (decorative only) -->
   <svg class="network" viewBox="0 0 1600 600" preserveAspectRatio="none" aria-hidden="true" role="img">
+    <!-- far background faint lines -->
     <g class="net-layer" transform="translate(0,8)">
       <path class="net-lines path-drift" d="M80 160 C220 120, 420 100, 580 150 C760 200, 920 160, 1100 210 C1280 260, 1420 220, 1560 200" />
       <path class="net-lines" d="M120 80 C260 40, 420 60, 620 100 C820 140, 980 120, 1180 140 C1380 160, 1500 140, 1560 120" style="opacity:0.4" />
     </g>
 
+    <!-- mid nodes/lines for depth -->
     <g class="net-layer" transform="translate(0,0)">
       <path class="net-foreground" d="M220 140 L320 90 L480 130 L640 110 L820 160" />
       <path class="net-foreground" d="M540 220 L660 180 L820 200 L980 180 L1200 220" />
     </g>
 
+    <!-- nodes (pulsing; different sizes for depth) -->
     <g class="net-layer" transform="translate(0,0)">
       <circle class="net-nodes node-pulse slow" cx="220" cy="140" r="4.4"></circle>
       <circle class="net-nodes node-pulse" cx="320" cy="90" r="3.8"></circle>
@@ -164,6 +182,7 @@ footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font
       <circle class="net-nodes node-pulse" cx="1200" cy="220" r="3.8"></circle>
     </g>
 
+    <!-- faint glow layer near top for realism -->
     <g transform="translate(0,0)" style="mix-blend-mode: screen; opacity:0.45;">
       <circle cx="360" cy="70" r="36" fill="rgba(20,150,220,0.04)"></circle>
       <circle cx="980" cy="40" r="24" fill="rgba(20,150,220,0.03)"></circle>
@@ -354,7 +373,7 @@ document.querySelectorAll('.faq-item').forEach(item => {
   item.addEventListener('keydown', (ev) => { if(ev.key === 'Enter' || ev.key === ' ') { ev.preventDefault(); toggle(); }});
 });
 
-/* Contact form: improved error handling & debug info */
+/* Contact form behavior with robust fallback */
 const APPSCRIPT_EXEC = "https://script.google.com/macros/s/AKfycbye6WBe-sERGIk_PvApsCFrS46Dq0t0s2rvic0mduAn1iZY_q5J49jinkaHPneqXxY18Q/exec";
 const form = document.getElementById('contact-form');
 const statusEl = document.getElementById('form-status');
@@ -368,33 +387,6 @@ const fallbackPreserve = document.getElementById('fallback-preserve');
 
 function buildEmailBody(data){
   return `Name: ${data.name}\nEmail: ${data.email}\nCompany: ${data.company}\n\nMessage:\n${data.message}`;
-}
-
-async function postToAppsScript(data) {
-  // send as form-encoded (Apps Script doPost standard)
-  const params = new URLSearchParams();
-  for (const k in data) params.append(k, data[k]);
-  // timeout helper
-  const controller = new AbortController();
-  const timeout = setTimeout(()=> controller.abort(), 15000); // 15s
-  try {
-    const resp = await fetch(APPSCRIPT_EXEC, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-      body: params.toString(),
-      signal: controller.signal
-    });
-    clearTimeout(timeout);
-    // read text (debug-safe)
-    const text = await resp.text();
-    // Try parse JSON if possible
-    let json = null;
-    try { json = JSON.parse(text); } catch(e){ json = null; }
-    return { ok: resp.ok, status: resp.status, json, text };
-  } catch (err) {
-    clearTimeout(timeout);
-    throw err;
-  }
 }
 
 form.addEventListener('submit', async (e) => {
@@ -418,66 +410,52 @@ form.addEventListener('submit', async (e) => {
     return;
   }
 
+  const params = new URLSearchParams();
+  for (const k in data) params.append(k, data[k]);
+
   try {
-    const result = await postToAppsScript(data);
-    // Helpful console logs for debugging
-    console.log('Apps Script response:', result);
+    const resp = await fetch(APPSCRIPT_EXEC, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: params.toString()
+    });
 
-    // If JSON with success true (string or boolean), treat as success
-    const successVal = result.json ? (result.json.success === true || result.json.success === "true") : false;
+    let json = null;
+    try { json = await resp.json(); } catch (err) { json = null; }
 
-    // Some Apps Script deployments return 200 even for non-JSON; it's okay to treat explicit success only
-    if (result.ok && successVal) {
+    if (resp.ok && json && (json.success === true || json.success === "true")) {
       statusEl.style.color = '#9be7b7';
       statusEl.textContent = "Message sent — we will reply within one business day.";
       form.reset();
       fallbackPanel.style.display = 'none';
       fallbackPreserve.textContent = '';
-      return;
+    } else {
+      // show graceful fallback panel with explicit email and options (no automatic navigation)
+      statusEl.style.color = '#ffd1a8';
+      statusEl.textContent = "Error sending — please use the fallback options below.";
+      showFallback(data);
+      console.warn('Apps Script response:', await resp.text().catch(()=>'(no text)'));
     }
-
-    // If server returned OK but no JSON success true, show the response text to console and fallback
-    console.warn('Apps Script did not return success. Status:', result.status, 'Text:', result.text);
-    // Show fallback and include short diagnostic in the fallback preserve (but do not expose raw server errors to users).
-    statusEl.style.color = '#ffd1a8';
-    statusEl.textContent = "Error sending — please use the fallback options below.";
-    showFallback(data, result);
   } catch (err) {
-    // Network/CORS/timeout - fallback
-    console.error("Contact send error (network/CORS/timeout):", err);
     statusEl.style.color = '#ffd1a8';
-    statusEl.textContent = "Network error or blocked request — use the fallback options below.";
-    showFallback(data, null, err);
+    statusEl.textContent = "Network/livetime error — use fallback options below.";
+    showFallback(data);
+    console.error("Contact send error:", err);
   } finally {
     submitBtn.disabled = false;
   }
 });
 
-function showFallback(data, serverResult=null, err=null){
+function showFallback(data){
   fallbackPanel.style.display = 'block';
   const email = 'aviosplatform@gmail.com';
   const subject = encodeURIComponent("Website contact: " + (data.name || 'Website user'));
   const body = encodeURIComponent(buildEmailBody(data));
   fallbackMailto.href = `mailto:${email}?subject=${subject}&body=${body}`;
-  openMailClient.onclick = () => { window.location.href = fallbackMailto.href; };
-  fallbackPreserve.textContent = `Message preview — copy/send using your email client:\n\n${buildEmailBody(data)}`;
-
-  // Append short diagnostic for your debugging in the console and as non-intrusive note in fallback (only minimal info)
-  if (serverResult && serverResult.text) {
-    // log full details to console (developer)
-    console.log('Apps Script server text:', serverResult.text);
-    // show brief hint to user to contact via email (do not show full server error)
-    const note = '\n\n(If problems persist, test manually by emailing aviosplatform@gmail.com.)';
-    fallbackPreserve.textContent += note;
-  }
-  if (err) {
-    console.log('Network/CORS/timeout error detail:', err);
-    const note2 = '\n\n(Network error detected — your browser could not reach the server.)';
-    fallbackPreserve.textContent += note2;
-  }
-
-  // bring into view for easy action
-  fallbackPanel.scrollIntoView({behavior:'smooth', block:'center'});
+  // openMailClient handler is set below
+  fallbackPreserve.textContent = `Message preview — please copy if needed:\n\n${buildEmailBody(data)}`;
+  // set accessible text
+  document.getElementById('fallback-preserve').setAttribute('aria-live','polite');
 }
 
 /* copy helpers */
@@ -490,7 +468,6 @@ copyEmail.addEventListener('click', async () => {
   } catch (err) {
     copyEmail.textContent = 'Copy failed';
     console.error(err);
-    setTimeout(()=> copyEmail.textContent = 'Copy email', 1400);
   }
 });
 copyBody.addEventListener('click', async () => {
@@ -502,9 +479,58 @@ copyBody.addEventListener('click', async () => {
   } catch (err) {
     copyBody.textContent = 'Copy failed';
     console.error(err);
-    setTimeout(()=> copyBody.textContent = 'Copy message text', 1400);
   }
 });
+
+/* ----- Robust "Open mail client (prefill)" handler (multi-attempt) ----- */
+openMailClient.addEventListener('click', function (e) {
+  e.preventDefault();
+
+  // mailto href (already set when showing fallback)
+  const mailHref = fallbackMailto.href;
+
+  // 1) Try direct location change (works in many browsers)
+  try {
+    window.location.href = mailHref;
+    // Give browser a tick — if it successfully handled mailto it will switch away
+    setTimeout(() => {
+      // no-op: allow further attempts if it didn't open
+    }, 400);
+  } catch (err) {
+    // ignore and continue to other attempts
+  }
+
+  // 2) Try window.open('_self') then window.open('_blank') as fallback
+  try {
+    const win = window.open(mailHref, '_self');
+    if (win) return; // opened successfully
+  } catch (err) { /* continue */ }
+
+  try {
+    const win2 = window.open(mailHref, '_blank');
+    if (win2) return;
+  } catch (err) { /* continue */ }
+
+  // 3) Create and click an ephemeral anchor element (works in many browsers)
+  try {
+    const a = document.createElement('a');
+    a.href = mailHref;
+    a.style.display = 'none';
+    a.target = '_self';
+    document.body.appendChild(a);
+    a.click();
+    setTimeout(() => {
+      try { document.body.removeChild(a); } catch (e) {}
+    }, 800);
+    return;
+  } catch (err) {
+    console.error('Programmatic anchor mailto attempt failed:', err);
+  }
+
+  // 4) Final fallback — tell the user to copy & paste the mailto into their mail client.
+  alert('Unable to open your mail app directly. Please copy the address and paste it into your email client: aviosplatform@gmail.com');
+});
+/* --------------------------------------------------------------------- */
 
 /* Hero image check - graceful placeholder */
 (function checkHero(){
